--- a/kzlforms/package.json
+++ b/kzlforms/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@loquiry/vue-record-audio": "^0.4.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "localforage": "^1.9.0",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "ts-md5": "^1.2.7",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
+    "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
